@@ -22,6 +22,7 @@ import com.carrotsearch.randomizedtesting.annotations.Name;
 import com.carrotsearch.randomizedtesting.annotations.ParametersFactory;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.elasticsearch.rest.CompatibleConstants;
 import org.elasticsearch.test.rest.yaml.ClientYamlTestCandidate;
 import org.elasticsearch.test.rest.yaml.ESClientYamlSuiteTestCase;
 import org.elasticsearch.test.rest.yaml.section.DoSection;
@@ -29,7 +30,6 @@ import org.elasticsearch.test.rest.yaml.section.ExecutableSection;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -76,9 +76,19 @@ public class AbstractCompatRestTest extends ESClientYamlSuiteTestCase {
             DoSection doSection = (DoSection) ds;
             //TODO: be more selective here
             doSection.setIgnoreWarnings(true);
-            //TODO: use the real header compatibility header
-            doSection.getApiCallSection().addHeaders(Collections.singletonMap("compatible-with", "v7"));
+
+            String compatibleHeader = createCompatibleHeader();
+            //TODO decide which one to use - Accept or Content-Type
+            doSection.getApiCallSection()
+                     .addHeaders(Map.of(
+                         CompatibleConstants.COMPATIBLE_HEADER, compatibleHeader,
+                         "Content-Type", compatibleHeader
+                         ));
         });
+    }
+
+    private static String createCompatibleHeader() {
+        return "application/vnd.elasticsearch+json;compatible-with=" + CompatibleConstants.COMPATIBLE_VERSION;
     }
 
 
